include("${CODAL_UTILS_LOCATION}")

include("${CODAL_UTILS_LOCATION}")
RECURSIVE_FIND_DIR(INCLUDE_DIRS "./inc" "*.h")
RECURSIVE_FIND_DIR(CM300_INCLUDE_DIRS "../codal-cm300/inc" "*.h")
RECURSIVE_FIND_DIR(CM300_MODEL_INCLUDE_DIRS "../codal-cm300/model" "*.h")
RECURSIVE_FIND_DIR(NRF52_INCLUDE_DIRS "../codal-nrf52/inc" "*.h")
RECURSIVE_FIND_DIR(NRF52_CMSIS_INCLUDE_DIRS "../codal-nrf52/inc/cmsis" "*.h")
RECURSIVE_FIND_DIR(NRF52_NRFX_INCLUDE_DIRS "../codal-nrf52/nrfx" "*.h")
RECURSIVE_FIND_DIR(NRF52_MDK_INCLUDE_DIRS "../codal-nrf52/nrfx/mdk" "*.h")
RECURSIVE_FIND_DIR(NRF52_TEMPLATES_INCLUDE_DIRS "../codal-nrf52/nrfx/templates" "*.h")
RECURSIVE_FIND_DIR(NRF52_NRF52840_INCLUDE_DIRS "../codal-nrf52/nrfx/templates/nRF52840" "*.h")
RECURSIVE_FIND_DIR(NRF52_DRIVER_INCLUDE_DIRS "../codal-nrf52/nrfx/drivers/include" "*.h")
RECURSIVE_FIND_FILE(SOURCE_FILES "./source" "*.c??")
RECURSIVE_FIND_FILE(CM300_MODEL_SOURCE_FILES "../codal-cm300/model" "*.c??")
RECURSIVE_FIND_FILE(NRF52_SOURCE_FILES "../codal-nrf52/source" "*.c??")

execute_process(WORKING_DIRECTORY "." COMMAND "git" "log" "--pretty=format:%h" "-n" "1" OUTPUT_VARIABLE git_hash)
execute_process(WORKING_DIRECTORY "." COMMAND "git" "rev-parse" "--abbrev-ref" "HEAD" OUTPUT_VARIABLE git_branch OUTPUT_STRIP_TRAILING_WHITESPACE)

if ("${git_branch}" STREQUAL "master")
    set(CODAL_VERSION_STRING "${CODAL_VERSION_STRING}")
else()
    set(CODAL_VERSION_STRING "${CODAL_VERSION_STRING}-${git_branch}-g${git_hash}")
endif()

set(CODAL_VERSION_FLAGS "-DCODAL_VERSION=\\\"${CODAL_VERSION_STRING}\\\"")

set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CODAL_VERSION_FLAGS}")

add_library(codal-core
    ${SOURCE_FILES}
    ${CM300_MODEL_SOURCE_FILES}
    ${NRF52_SOURCE_FILES}
)

target_include_directories(codal-core PUBLIC ${INCLUDE_DIRS} ${CM300_MODEL_INCLUDE_DIRS} ${NRF52_INCLUDE_DIRS} ${NRF52_CMSIS_INCLUDE_DIRS} ${NRF52_NRFX_INCLUDE_DIRS} ${NRF52_MDK_INCLUDE_DIRS} ${NRF52_TEMPLATES_INCLUDE_DIRS} ${NRF52_NRF52840_INCLUDE_DIRS} ${NRF52_DRIVER_INCLUDE_DIRS} ${CM300_INCLUDE_DIRS})
